# ride

./: CMakeLists.txt  MatchingStrategy.h  Observer.h  PricingStrategy.h  README.md  Ride.h  RideEasyUML.puml  RideManager.h  RideTypes.h  UML_README.md  User.h  WebServer.h  main.cpp  run.bat  run.py  run.txt
UMLDiagrams/: UML_README.md
